# alef

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
alef-check/: Cargo.toml
alef-check/src/: main.rs
alef-check/src/cmd/: generate.rs  lex.rs  mod.rs  parse.rs
docs/reference/latex/: main.tex
docs/reference/latex/chapters/: decs.tex  exprs.tex  lex.tex  model.tex  stmns.tex  type_system.tex
parser/: Cargo.toml  README.org
parser/src/: lib.rs  sym.rs
parser/src/ast/: scope.rs  visit.rs
parser/src/ast/node/: dec.rs  expr.rs  mod.rs  stmt.rs
parser/src/diagnostic/: dman.rs  err.rs  mod.rs
parser/src/lex/: cman.rs  comment.rs  err.rs  scan.rs  token.rs
parser/src/parse/: mod.rs
parser/src/parse/dec/: err.rs  mod.rs
parser/src/parse/expr/: mod.rs
parser/src/parse/stmt/: mod.rs
parser/src/parse/ty/: mod.rs
parser/src/source/: err.rs  loc.rs  mod.rs
parser/src/types/: mod.rs  visit.rs
parser/tests/: lex_test.rs
parser/tests/p9_srcs/: 1.l  10.l  11.l  12.l  13.l  14.l  15.l  16.l  17.l  18.l  19.l  2.l  20.l  3.l  4.l  5.l  6.l  7.l  8.l  9.l  _asgetticket.l  _asrdfile.l  _asrdresp.l  _asreadn.l  aa.l  abs.l  access.l  acid.l  acme.l  addr.l  adict.l  alef.l  alloc.l  amount.l  announce.l  arc.l  arg.l  arith.l  arith1.l  asin.l  (+253 more)
