[package]
name = "alef-check"
version = "0.1.0"
edition = "2021"
description = "Parse, dump and analyze Alef source files"
authors = ["Edoardo Marangoni <ecmma@anche.no>"]

[dependencies]
alef-parser = { path = "../parser" }
log = "0.4.14"
env_logger = "0.9.0"
simple_logger = "1.16.0"
clap = {version = "3.0.5", features = ["derive", "cargo"]}
clap_complete = "3.0.2"
anyhow = "1.0.52"
